Alert is added when no files found or search file not found. Message file is updated. New messages are translated to Bengali.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -264,17 +264,18 @@ default.header.role=Role ID
 default.myprofile.role=Role
 #Swal-Alert
 swal.change.alert=Are you Sure?
-swal.change.not.available=Once deleted, user will not be available!
+swal.change.not.available.user=Once deleted, user will not be available!
 swal.change.not.available.file=Once deleted, file will not be available!
 swal.change.warning=warning
 swal.change.delete=Deleted!
 swal.change.user.delete=User has been deleted
 swal.change.file.delete=File has been deleted
-swal.change.file.delete.All=All files has been deleted
-swal.change.file.not.delete.All=All files can not be deleted as some file is open
-swal.change.s=success
+swal.change.file.delete.All=All files have been deleted
+swal.change.file.not.delete.All=All files can not be deleted as some files are opened
+swal.change.success=success
 swal.change.cancel=Cancelled
-swal.change.user.s=User is safe :)
-swal.change.file.s=File is open,cannot delete this file :)
+swal.change.user.safe=User is safe
+swal.change.file.safe=File is open, cannot delete this file
 swal.change.error=error
 update.user.success=User {0} has been updated successfully
+default.delete.all.button=Delete All
