--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -201,12 +201,14 @@ invalid.message=Wrong Sourcepath or Wrong Filename or Invalid File Type.\nNote:T
 processing.message=Uploading ...
 sms.body.message.upload=You have uploaded a file: {0}
 sms.body.message.delete=You have deleted a file: {0}
+sms.body.message.delete.all=You have deleted all file.
 sms.body.message.user.creation=A new user is created: {0}
 sms.body.message.password=Password is successfully changed.
 sms.body.message.dummy=This is a dummy SMS.
 success.message.sent=sms has been sent successfully
 mail.body.upload=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
 mail.body.delete=Dear Receiver, You have deleted a file:\n\n#\n\nTHANK YOU!!
+mail.body.delete.all=Dear Receiver, You have deleted all files.\n\nTHANK YOU!!
 mail.body.user.creation=Dear Receiver, A new user created:\n\n#\n\nTHANK YOU!!
 mail.body.reset.password=Dear Receiver, Password is successfully changed. \n\nTHANK YOU!!
 mail.body.dummy=Dear Receiver, This is a dummy mail.\n\nTHANK YOU!!
