--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -1,70 +1,274 @@
-default.doesnt.match.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no corresponde al patrón [{3}]
-default.invalid.url.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es una URL válida
-default.invalid.creditCard.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es un número de tarjeta de crédito válida
-default.invalid.email.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es una dirección de correo electrónico válida
-default.invalid.range.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no entra en el rango válido de [{3}] a [{4}]
-default.invalid.size.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no entra en el tamaño válido de [{3}] a [{4}]
-default.invalid.max.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] excede el valor máximo [{3}]
-default.invalid.min.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] es menos que el valor mínimo [{3}]
-default.invalid.max.size.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] excede el tamaño máximo de [{3}]
-default.invalid.min.size.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] es menor que el tamaño mínimo de [{3}]
-default.invalid.validator.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es válido
-default.not.inlist.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no esta contenido dentro de la lista [{3}]
-default.blank.message=La propiedad [{0}] de la clase [{1}] no puede ser vacía
-default.not.equal.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no puede igualar a [{3}]
-default.null.message=La propiedad [{0}] de la clase [{1}] no puede ser nulo
-default.not.unique.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] debe ser única
-
-default.paginate.prev=Anterior
-default.paginate.next=Siguiente
-default.boolean.true=Verdadero
-default.boolean.false=Falso
+default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
+default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
+default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
+default.invalid.email.message=Property [{0}] of class [{1}] with value [{2}] is not a valid e-mail address
+default.invalid.range.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid range from [{3}] to [{4}]
+default.invalid.size.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid size range from [{3}] to [{4}]
+default.invalid.max.message=Property [{0}] of class [{1}] with value [{2}] exceeds maximum value [{3}]
+default.invalid.min.message=Property [{0}] of class [{1}] with value [{2}] is less than minimum value [{3}]
+default.invalid.max.size.message=Property [{0}] of class [{1}] with value [{2}] exceeds the maximum size of [{3}]
+default.invalid.min.size.message=Property [{0}] of class [{1}] with value [{2}] is less than the minimum size of [{3}]
+default.invalid.validator.message=Property [{0}] of class [{1}] with value [{2}] does not pass custom validation
+default.not.inlist.message=Property [{0}] of class [{1}] with value [{2}] is not contained within the list [{3}]
+default.blank.message=Property [{0}] of class [{1}] cannot be blank
+default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
+default.null.message=Property [{0}] of class [{1}] cannot be null
+default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+default.paginate.prev=Previous
+default.paginate.next=Next
+default.boolean.true=True
+default.boolean.false=False
 default.date.format=yyyy-MM-dd HH:mm:ss z
 default.number.format=0
-
-default.created.message={0} {1} creado
-default.updated.message={0} {1} actualizado
-default.deleted.message={0} {1} eliminado
-default.not.deleted.message={0} {1} no puede eliminarse
-default.not.found.message=No se encuentra {0} con id {1}
-default.optimistic.locking.failure=Mientras usted editaba, otro usuario ha actualizado su {0}
-
-default.home.label=Principal
-default.list.label={0} Lista
-default.add.label=Agregar {0}
-default.new.label=Nuevo {0}
-default.create.label=Crear {0}
-default.show.label=Mostrar {0}
-default.edit.label=Editar {0}
-
-default.button.create.label=Crear
-default.button.edit.label=Editar
-default.button.update.label=Actualizar
-default.button.delete.label=Eliminar
-default.button.delete.confirm.message=¿Está usted seguro?
-
+default.created.message={0} {1} created
+default.updated.message={0} {1} updated
+default.deleted.message={0} {1} deleted
+default.not.deleted.message={0} {1} could not be deleted
+default.not.found.message={0} not found with id {1}
+default.optimistic.locking.failure=Another user has updated this {0} while you were editing
+# operation
+default.delete.label=हटाएं
+default.preview.label=पूर्वावलोकन
+default.list.label=তালিকা ফাইল
+default.all.delete.label=সমস্ত ফাইল মুছুন
+default.select.label=ফাইল নির্বাচন করুন
+default.upload.label=আপলোড
+default.button.create.label=সৃষ্টি
+default.button.edit.label=সম্পাদন করা
+default.button.update.label=হালনাগাদ
+default.button.delete.label=মুছে ফেলা
+default.button.logout=প্রস্থান
+default.email.checkbox=ইমেইল পাঠান
+default.sms.checkbox=এসএমএস পাঠান
+default.button.cancel=বাতিল
+default.button.ok=ঠিক আছে
+default.button.submit=জমা দিন
+default.button.search =অনুসন্ধান করুন
+default.search.placeholder=অনুসন্ধান করুন
+default.home.page=বাড়ি
+default.user.name=Username:\n\n
+default.path=D:\\File\\
+# Messages
+default.dropdown.choose.action=নির্বাচন করুন
+welcome.utils.tool=ফাইল পরিচালনা সরঞ্জামে আপনাকে স্বাগতম
+perform.file.listing=ফাইল তালিকা
+default.button.delete.confirm.message=তুমি কি নিশ্চিত?
+perform.file.preview=পিডিএফ রিডার
+# Flash Messages
+flash.message.success=সম্পন্ন
+flash.message.all.files.delete=সমস্ত ফাইল সফলভাবে মুছে ফেলা হয়েছে!
+flash.message.file.upload=ফাইলটি সফলভাবে আপলোড করা হয়েছে!
+flash.message.file.delete=ফাইলটি সফলভাবে মুছে ফেলা হয়েছে!
+flash.message.no.files.found=দুঃখিত! কোনও ফাইল পাওয়া যায় নি
+flash.message.sms=এসএমএস সফলভাবে পাঠানো হয়েছে!
+flash.message.email=মেল সফলভাবে প্রেরণ করা হয়েছে!
+flash.message.invalid.file=অবৈধ ফাইলের আকার বা চেক ফাইলের ফর্ম্যাট.ফাইল কেবলমাত্র .pdf, .csv, .xlsx, .xML, .txt ফর্ম্যাটে থাকবে!
+flash.message.check.connectivity=দূরবর্তী অবস্থান অ্যাক্সেস করতে পারবেন না। আপনার সংযোগ পরীক্ষা করুন!
+flash.message.replace.file=ফাইল ইতিমধ্যে আছে। ফাইল প্রতিস্থাপন করা হয়েছে।
+flash.message.search.not.found.warn=কোন ফলাফল পাওয়া যায়নি
+flash.message.search.user.not.found.warn=অনুসন্ধানকৃত ব্যবহারকারীর জন্য কোনও ফলাফল পাওয়া যায় নি
+flash.message.file.search.name.empty.warn=অনুসন্ধানের জন্য ফাইলের নাম লিখুন।
+flash.message.user.search.name.empty.warn=অনুসন্ধানের জন্য ব্যবহারকারীর নাম লিখুন।
+flash.message.file.size.mismatch=ফাইলের আকার গৃহীত মানের চেয়ে বেশি।
+# Register Page
+springSecurity.register.header=এখানে নিবন্ধন করুন
+springSecurity.register.button=নিবন্ধন
+springSecurity.register.title=নিবন্ধন
+springSecurity.register.role=ভূমিকা
+springSecuirity.register.account=কোন অ্যাকাউন্ট নেই?
+springSecuirity.have.account=ইতিমধ্যে একটি সদস্যপদ আছে?
+springSecurity.login.reenter.password.label=পাসওয়ার্ড নিশ্চিত করুন
+captcha.mismatch = ক্যাপচা সঠিক নয়
+login.failed = ভুল স্থানাঙ্ক মান বা ভুল শংসাপত্র
+flash.message.register.success=আপনি সফলভাবে নিবন্ধিত হয়েছেন। অনুগ্রহ করে লগইন করুন
+flash.message.register.fail=নিবন্ধন ব্যর্থ
+springSecurity.register.firstname.label=নামের প্রথমাংশ
+springSecurity.register.lastname.label=নামের শেষাংশ
+springSecurity.register.email.label=ইমেল ঠিকানা
+springSecurity.register.mobilenumber.label=মোবাইল নম্বর
+flash.message.incorrect.captcha=দয়া করে বৈধ ক্যাপচা সরবরাহ করুন
+# My Profile
+default.button.myprofile=আমার প্রোফাইল
+flash.message.user.warn=খালি ক্ষেত্র আনতে পারে না
+flash.message.edituser.warn=ব্যবহারকারীর বিবরণ সংরক্ষণ করতে অক্ষম। কিছু বাধ্যতামূলক ক্ষেত্র ফাঁকা রয়েছে
+default.user.details=ব্যবহারকারীর বৃত্যান্ত
+default.myprofile.header=আমার প্রোফাইল
+default.myprofile.firstname=নামের প্রথমাংশ
+default.myprofile.lastname=নামের শেষাংশ
+default.myprofile.email=ইমেল ঠিকানা
+default.myprofile.mobilenumber=মোবাইল নম্বর
+default.myprofile.username=ব্যবহারকারীর নাম
+myprofile.update.user.success=আপনার প্রোফাইল সফলভাবে আপডেট হয়েছে
+# User Management
+default.listuser.header=ব্যবহারকারীরা
+default.user.listing.label=ব্যবহারকারীদের তালিকা
+default.button.createuser=ব্যবহারকারী তৈরি করুন
+default.button.deleteuser=ব্যবহারকারী মুছুন
+# Denied Page
+springSecurity.denied.title=অস্বীকৃত
+springSecurity.denied.message=দুঃখিত, আপনি এই পৃষ্ঠাটি দেখার অনুমতিপ্রাপ্ত নন।
+# Login errors
+springSecurity.errors.login.expired=দুঃখিত, আপনার অ্যাকাউন্টের মেয়াদ শেষ হয়ে গেছে।
+springSecurity.errors.login.passwordExpired=দুঃখিত, আপনার পাসওয়ার্ডের মেয়াদ শেষ হয়ে গেছে।
+springSecurity.errors.login.disabled=দুঃখিত, আপনার অ্যাকাউন্ট অক্ষম করা আছে।
+springSecurity.errors.login.locked=দুঃখিত, আপনার অ্যাকাউন্ট লক করা আছে।
+springSecurity.errors.login.fail=দুঃখিত, আমরা সেই ব্যবহারকারী নাম এবং পাসওয়ার্ড সহ কোনও ব্যবহারকারীর সন্ধান করতে পারি না।
+springSecurity.errors.login.max.sessions.exceeded=দুঃখিত, আপনি আপনার সর্বাধিক সংখ্যক খোলা সেশনটি ছাড়িয়ে গেছেন।
+# Login Page
+springSecurity.login.title=প্রবেশ করুন
+springSecurity.login.header=দয়া করে লগইন করুন
+springSecurity.login.button=প্রবেশ করুন
+springSecurity.login.username.label=ব্যবহারকারীর নাম
+springSecurity.login.password.label=পাসওয়ার্ড
+springSecurity.login.remember.me.label=আমাকে মনে করুন
+# Change Password
+default.button.change=পাসওয়ার্ড পরিবর্তন করুন
+springSecurity.change.password.title=পাসওয়ার্ড পরিবর্তন করুন
+springSecurity.change.password.header=পাসওয়ার্ড পরিবর্তন করুন
+springSecurity.current.password.label=বর্তমান পাসওয়ার্ড
+springSecurity.new.password.label=নতুন পাসওয়ার্ড
+springSecurity.confirm.password.label=পাসওয়ার্ড নিশ্চিত করুন
+springsecurity.change.password.fail=পাসওয়ার্ড পরিবর্তন করতে ব্যর্থ
+springsecurity.change.password.success=আপনার পাসওয়ার্ড সফলভাবে পরিবর্তন করা হয়েছে।
+flash.message.choose.different.password=আপনার বর্তমান পাসওয়ার্ড থেকে একটি পৃথক পাসওয়ার্ড চয়ন করুন
+flash.message.incorrect.current.password=বর্তমান পাসওয়ার্ডটি ভুল
+# Reset Password
+default.button.reset=পাসওয়ার্ড রিসেট করুন
+flash.message.new.password.mismatch=নতুন পাসওয়ার্ড এবং নিশ্চিত পাসওয়ার্ড মেলে না
+springSecurity.reset.password.title=পাসওয়ার্ড রিসেট করুন
+springSecurity.reset.password.header=পাসওয়ার্ড রিসেট করুন
+springsecurity.reset.password.success=সফলভাবে ব্যবহারকারীর জন্য পাসওয়ার্ড পুনরায় সেট করুন: {0}
+springsecurity.reset.password.fail=পাসওয়ার্ড পুনরায় সেট করতে ব্যর্থ
+# Tooltip message
+title.email.tooltip=ইমেল প্রেরণের জন্য এই বাক্সটি চেক করুন
+title.sms.tooltip=এসএমএস পাঠাতে এই বাক্সটি চেক করুন
+title.home.tooltip=হোম পৃষ্ঠায় ফিরে যান
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
-typeMismatch.java.net.URL=La propiedad {0} debe ser una URL válida
-typeMismatch.java.net.URI=La propiedad {0} debe ser una URI válida
-typeMismatch.java.util.Date=La propiedad {0} debe ser una fecha válida
-typeMismatch.java.lang.Double=La propiedad {0} debe ser un número válido
-typeMismatch.java.lang.Integer=La propiedad {0} debe ser un número válido
-typeMismatch.java.lang.Long=La propiedad {0} debe ser un número válido
-typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
-typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
-typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
-springSecurity.register.firstname.label=First Name
-springSecurity.register.lastname.label=last Name
-springSecurity.register.email.label=Email Address
-springSecurity.register.mobilenumber.label=Mobile Number
-springSecurity.change.password.header=Change Password
-springSecurity.current.password.label=Current Password
-springSecurity.new.password.label=New Password
-springSecurity.confirm.password.label=Confirm New Password
-springSecurity.reset.password.header=Reset Password
-springSecurity.login.captcha.label=Captcha
-flash.message.user.delete=has been successfully deleted
-flash.message.user.error.delete=You cannot delete logged in user
-flash.message.file.size.mismatch=File Size is more than the accepted value
-default.button.edit=Edit
-default.myprofile.username.role=Role
+typeMismatch.java.net.URL=Property {0} must be a valid URL
+typeMismatch.java.net.URI=Property {0} must be a valid URI
+typeMismatch.java.util.Date=Property {0} must be a valid Date
+typeMismatch.java.lang.Double=Property {0} must be a valid number
+typeMismatch.java.lang.Integer=Property {0} must be a valid number
+typeMismatch.java.lang.Long=Property {0} must be a valid number
+typeMismatch.java.lang.Short=Property {0} must be a valid number
+typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
+typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+typeMismatch=Property {0} is type-mismatched
+default.new.label=New {0}
+default.create.label=Create {0}
+default.show.label=Show {0}
+default.edit.label=Edit {0}
+springSecurity.login.captcha.label=ক্যাপচা প্রবেশ করান
+# Preview Controller
+flash.message.file.cannot.previewed=ফাইলের পূর্বরূপ দেওয়া যায় না
+#------------------------------------------messages----------------------------------------
+command.execute.case=\nput -F or -f to copy a file\n\
+  put -l or -L to list all files\n\
+  put -d or -D to delete files\n\
+  put -r or -R to read Subject of Unread mails in specific email folders
+command.execute.jar=\nFollow the commands:\nCopy a file: java -jar <jarname.jar> -f <filename>\n\
+  List all files: java -jar <jarname.jar> -l\nDelete a file: java -jar <jarname.jar> -d <filename> \n\
+  Delete all files:  java -jar <jarname.jar> -d "*" \n\
+  Read Subjects of unread mails: java -jar <jarname.jar> -r <Email_foldername>\n\n\
+  Note: filename should be in .pdf,.csv,.txt,.xml and .xlsx format only!\n\nException occured:\n
+subject.of.mail=ফাইল আপলোড মেল
+success.message.mail=মেল সফলভাবে প্রেরণ করা হয়েছে।
+success.copy.message=ফাইলটি সফলভাবে আপলোড করা হয়েছে।
+success.list.message=লোকেশনে উপলব্ধ ফাইলগুলি হ'ল:\n
+success.delete.message=ফাইল সফলভাবে মোছা হয়েছে!
+success.delete.all.files=সমস্ত ফাইল সফলভাবে মোছা হয়েছে!
+file.not.found.message=দুঃখিত, ফাইল নেই!
+files.not.found=দুঃখিত, কোন ফাইল নেই!
+invalid.filesize=ফাইলের আকার 10MB এর বেশি হতে পারে না
+invalid.message=ভুল সোর্সপ্যাথ বা ভুল ফাইল নাম বা অবৈধ ফাইল প্রকার।\nদ্রষ্টব্য: ফাইলটি কেবলমাত্র .pdf, .csv, .xlsx, .xML, .txt ফর্ম্যাটে থাকবে!
+processing.message=আপলোড হচ্ছে ...
+sms.body.message=আপনি একটি ফাইল আপলোড করেছেন: {0}
+success.message.sent=এসএমএস সফলভাবে প্রেরণ করা হয়েছে
+mail.body=প্রিয় রিসিভার, আপনি একটি ফাইল আপলোড করেছেন:\n\n#\n\nধন্যবাদ!!
+springSecurity.submit.button=জমা দিন
+default.add.user.button=ব্যবহারকারী তৈরি করুন
+flash.message.create.user.sucess=নতুন ব্যবহারকারী {0} সফলভাবে তৈরি করা হয়েছে
+flash.message.create.user.fail=নতুন ব্যবহারকারী তৈরি করতে ব্যর্থ
+springSecurity.createuser.header=ব্যবহারকারী তৈরি করুন
+springSecurity.createuser.title=ব্যবহারকারী তৈরি করুন
+perform.edit.user=ব্যবহারকারী সম্পাদনা করুন
+default.myprofile.dialog.save=পরিবর্তনগুলোর সংরক্ষন
+default.myprofile.dialog.close=ঘনিষ্ঠ
+default.myprofile.dialog.title=জীবন বৃত্তান্ত সম্পাদনা
+flash.message.user.delete=সফলভাবে মুছে ফেলা হয়েছে
+default.user.header=ব্যবহারকারীরা
+springSecurity.autogenerated.password.label=স্বয়ং-জেনারেট হওয়া পাসওয়ার্ড
+auto.generate.password.yes=হ্যাঁ
+auto.generate.password.no=না
+springSecurity.login.coordinate.value=স্থানাঙ্ক প্রবেশ করান
+springSecurity.register.sex.label=লিঙ্গ
+register.sex.female=মহিলা
+register.sex.male=পুরুষ
+springSecurity.register.date.label=জন্ম তারিখ
+default.myprofile.sex=লিঙ্গ
+default.myprofile.dateofbirth=জন্ম তারিখ
+main.page.user.welcome=স্বাগত,
+main.title=সলিউশন
+main.upload.title=পৃষ্ঠা আপলোড করুন
+main.settings.title=সেটিংস
+main.index.head.title = ড্যাশবোর্ড
+side.bar.index.head.title = ড্যাশবোর্ড
+side.bar.index.overview.title = সংক্ষিপ্ত বিবরণ
+side.bar.index.upload.title = আপলোড
+side.bar.index.list.user.title = ব্যবহারকারীদের তালিকা
+side.bar.index.delete.all.files.title = সমস্ত ফাইল মুছুন
+side.bar.index.settings.title=সেটিংস
+main.title.settings=সেটিংস
+main.index.my.dashboard.title = আমার ড্যাশবোর্ড
+main.index.box.all.files.title = সকল নথি
+main.index.box.document.title = কাগজপত্র
+main.index.box.ppt.title = উপস্থাপনা
+main.index.box.images.title = চিত্র
+main.index.box.video.title = ভিডিও
+main.index.label.list.all.files = তালিকা ফাইল
+upload.choose.file.message = ফাইল পছন্দ কর
+upload.title.message = আপলোড
+main.file.list.file.name.head = ফাইলের নাম
+main.file.list.file.size.head = ফাইলের আকার
+main.file.list.creation.date.head = ফাইল তৈরির তারিখ
+main.file.list.preview.head = পূর্বরূপ
+main.file.list.action.icon.head = কর্ম
+#Language
+default.change.language=ভাষা পরিবর্তন করুন
+settings.max.size.file = ফাইলের সর্বোচ্চ আকার প্রবেশ করুন (এমবি তে)
+language.en=ইংরেজি
+language.bn=বাংলা
+language.Hindi=হিন্দি
+default.email.format=abc@example.com
+check.username.available.no=এই নাম আগেই এখানে আছে
+check.username.available.yes=সহজলভ্য
+default.password.format=সর্বনিম্ন 8 এবং সর্বোচ্চ 20 টি অক্ষর, কমপক্ষে একটি বড় হাতের অক্ষর, একটি ছোট হাতের অক্ষর, একটি সংখ্যা এবং একটি বিশেষ অক্ষর
+register.sex.others=অন্যান্য
+settings.submit.button=জমা দিন
+placeholder.file.size=এমবিতে ফাইলের আকার
+warning.setting.file.size=দয়া করে সেটিংস মেনু থেকে সর্বোচ্চ ফাইলের আকার সেট করুন, এর পরে আপনি কোনও ফাইল আপলোড করতে পারেন।
+alert.file.large=ফাইল বড়, দয়া করে এর চেয়ে কম ফাইল নির্বাচন করুন 
+flash.message.choose.user.warn=কোনও ব্যবহারকারী পাওয়া যায় নি ,পাসওয়ার্ড পুনরায় সেট করতে ব্যবহারকারী চয়ন করুন
+default.button.edituser=ব্যবহারকারী সম্পাদনা করুন
+default.header.user=ব্যবহারকারীর প্রমানপত্র
+flash.message.no.user.found=কোন ব্যবহারকারী পাওয়া যায় নি
+springsecurity.show.user.fail=ব্যবহারকারীর বিবরণ আনতে পারে না
+file.size.limit.save.alert= ফাইলের আকার আপলোড সীমা {0} এমবিতে সেট করা হয়েছে
+default.myprofile.username.role=ভূমিকা
+default.header.role=ভূমিকা আইডি
+default.myprofile.role=ভূমিকা
+#Swal-Alert
+swal.change.alert=তুমি কি নিশ্চিত?
+swal.change.not.available=একবার মুছে ফেলা হলে, ব্যবহারকারী উপলব্ধ হবে না!
+swal.change.not.available.file=একবার মুছে ফেলা হলে ফাইল পাওয়া যাবে না!
+swal.change.warning=সাবধানবাণী
+swal.change.delete=মোছা হয়েছে!
+swal.change.user.delete=ব্যবহারকারী মুছে ফেলা হয়েছে
+swal.change.file.delete=ফাইল মুছে ফেলা হয়েছে
+swal.change.file.delete.All=সমস্ত ফাইল মুছে ফেলা হয়েছে
+swal.change.s=সাফল্য
+swal.change.cancel=বাতিল করা হয়েছে
+swal.change.user.s=ব্যবহারকারী নিরাপদ :)
+swal.change.file.s=ফাইলটি উন্মুক্ত, এই ফাইলটি মুছতে পারে না :)
+swal.change.error=ত্রুটি
+update.user.success=ব্যবহারকারী {0} সফলভাবে আপডেট করা হয়েছে
